# bugslyce

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
bugslyce/: __init__.py  branding.py  cli.py  config.py  doctor.py  interactive.py  project_pipeline.py  project_session.py  time_utils.py  wizard.py
docs/: DEMO_WALKTHROUGH.md  INSTALLATION.md  OPERATOR_GUIDE.md  RECON_MODES.md  RELEASE_ACCEPTANCE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  TROUBLESHOOTING.md
tests/: test_artefact_analysis.py  test_artifact_classifier.py  test_body_fetch_live.py  test_branding.py  test_cli.py  test_collection_confidence.py  test_config.py  test_content_discovery_coverage.py  test_content_followup_live.py  test_content_plan.py  test_content_run_live.py  test_curl_headers_live.py  test_deep_collection_policy.py  test_deep_collection_request_plan.py  test_deep_collection_review_bundle.py  test_deep_eligibility.py  test_deep_form_inventory.py  test_deep_html_route_extraction.py  test_deep_http_fetcher.py  test_deep_http_fingerprint_summary.py  test_deep_javascript_route_extraction.py  test_deep_metadata_collection_export.py  test_deep_metadata_collection_review.py  test_deep_metadata_collector.py  test_deep_metadata_coverage.py  test_deep_metadata_plan.py  test_deep_metadata_review.py  test_deep_orchestration.py  test_deep_outputs.py  test_deep_parameter_inventory.py  test_deep_plan.py  test_deep_preflight.py  test_deep_preview_bundle.py  test_deep_readiness.py  test_deep_redirect_auth_flow_review.py  test_deep_response_similarity_review.py  (+56 more)
(+168 files in other folders)
