[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bugslyce"
version = "0.1.0"
description = "A local-first CLI recon triage assistant for authorised bug bounty workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "BugSlyce Contributors" }
]
keywords = ["bug-bounty", "recon", "triage", "security", "cli"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
bugslyce = "bugslyce.cli:main"

[tool.setuptools.packages.find]
include = ["bugslyce*"]

[tool.setuptools.package-data]
bugslyce = ["wordlists/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
